
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_9__ TYPE_4__ ;
typedef struct TYPE_8__ TYPE_3__ ;
typedef struct TYPE_7__ TYPE_2__ ;
typedef struct TYPE_6__ TYPE_1__ ;


struct pcidio_private {int dummy; } ;
struct pci_dev {scalar_t__ vendor; scalar_t__ device; int devfn; TYPE_1__* bus; } ;
struct comedi_device {scalar_t__ subdevices; int board_name; TYPE_3__* board_ptr; int minor; } ;
struct comedi_devconfig {scalar_t__* options; } ;
struct TYPE_9__ {scalar_t__ dio_reg_base; struct pci_dev* pci_dev; } ;
struct TYPE_8__ {scalar_t__ dev_id; int dioregs_badrindex; } ;
struct TYPE_7__ {int n_8255; int name; } ;
struct TYPE_6__ {scalar_t__ number; } ;


 int ARRAY_SIZE (TYPE_3__*) ;
 int EIO ;
 int ENOMEM ;
 int PCI_ANY_ID ;
 scalar_t__ PCI_SLOT (int ) ;
 scalar_t__ PCI_VENDOR_ID_CB ;
 scalar_t__ alloc_private (struct comedi_device*,int) ;
 scalar_t__ alloc_subdevices (struct comedi_device*,int) ;
 scalar_t__ comedi_pci_enable (struct pci_dev*,int ) ;
 TYPE_4__* devpriv ;
 struct pci_dev* pci_get_device (int ,int ,struct pci_dev*) ;
 scalar_t__ pci_resource_start (struct pci_dev*,int ) ;
 TYPE_3__* pcidio_boards ;
 int printk (char*,...) ;
 int subdev_8255_init (struct comedi_device*,scalar_t__,int *,scalar_t__) ;
 TYPE_2__* thisboard ;

__attribute__((used)) static int pcidio_attach(struct comedi_device *dev, struct comedi_devconfig *it)
{
 struct pci_dev *pcidev = ((void*)0);
 int index;
 int i;

 printk("comedi%d: cb_pcidio: \n", dev->minor);





 if (alloc_private(dev, sizeof(struct pcidio_private)) < 0)
  return -ENOMEM;
 for (pcidev = pci_get_device(PCI_ANY_ID, PCI_ANY_ID, ((void*)0));
      pcidev != ((void*)0);
      pcidev = pci_get_device(PCI_ANY_ID, PCI_ANY_ID, pcidev)) {

  if (pcidev->vendor != PCI_VENDOR_ID_CB)
   continue;

  for (index = 0; index < ARRAY_SIZE(pcidio_boards); index++) {
   if (pcidio_boards[index].dev_id != pcidev->device)
    continue;


   if (it->options[0] || it->options[1]) {

    if (pcidev->bus->number != it->options[0] ||
        PCI_SLOT(pcidev->devfn) != it->options[1]) {
     continue;
    }
   }
   dev->board_ptr = pcidio_boards + index;
   goto found;
  }
 }

 printk("No supported ComputerBoards/MeasurementComputing card found on "
        "requested position\n");
 return -EIO;

found:





 dev->board_name = thisboard->name;

 devpriv->pci_dev = pcidev;
 printk("Found %s on bus %i, slot %i\n", thisboard->name,
        devpriv->pci_dev->bus->number,
        PCI_SLOT(devpriv->pci_dev->devfn));
 if (comedi_pci_enable(pcidev, thisboard->name)) {
  printk
      ("cb_pcidio: failed to enable PCI device and request regions\n");
  return -EIO;
 }
 devpriv->dio_reg_base
     =
     pci_resource_start(devpriv->pci_dev,
          pcidio_boards[index].dioregs_badrindex);





 if (alloc_subdevices(dev, thisboard->n_8255) < 0)
  return -ENOMEM;

 for (i = 0; i < thisboard->n_8255; i++) {
  subdev_8255_init(dev, dev->subdevices + i,
     ((void*)0), devpriv->dio_reg_base + i * 4);
  printk(" subdev %d: base = 0x%lx\n", i,
         devpriv->dio_reg_base + i * 4);
 }

 printk("attached\n");
 return 1;
}
